# Data-Bridge

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  render.yaml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1aa07571b65f_create_initial_data_bridge_schema.py
backend/app/: __init__.py  main.py
backend/app/core/: config.py  dependencies.py  environment.py  utils.py
backend/app/database/: base.py  models.py  session.py
backend/app/fixtures/: inventory_demo.csv  sales_demo.csv  support_demo.json
backend/app/integrations/storage/: factory.py  local.py
backend/app/modules/alerts/: router.py  schemas.py
backend/app/modules/analytics/: router.py  schemas.py
backend/app/modules/audit/: router.py  schemas.py
backend/app/modules/auth/: router.py  schemas.py  tokens.py
backend/app/modules/datasets/: router.py  schemas.py
backend/app/modules/health/: router.py
backend/app/modules/imports/: __init__.py  router.py  schemas.py
backend/app/modules/organizations/: router.py  schemas.py
backend/app/modules/reports/: router.py  schemas.py
backend/app/scripts/: __init__.py  seed_demo.py
backend/app/services/: audit_service.py  processing_service.py  report_service.py
backend/app/workers/: celery_app.py  tasks.py
backend/tests/: test_alerts.py  test_auth.py  test_dataset_details.py  test_health.py  test_import_flow.py  test_organizations.py  test_reports.py  test_upload_validation.py
(+78 files in other folders)
